--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,11 @@
+# <DOCUMENT filename="requirements.txt"> (شيلنا الحاجات الغير ضرورية)
 streamlit
-PyMuPDF
+PyMuPDF>=1.24.0  # لدعم OCR built-in
 sentence-transformers
 chromadb
 requests
-langdetect
+langdetect  # لو عايزين detect language
 python-docx
-pytesseract
+pytesseract  # احتياطي لو عايزين OCR خارجي لاحقاً
 Pillow
-patool
-py7zr
-opencv-python-headless==4.8.1.78
+opencv-python-headless
